# kk2-oraklet

./: .gitignore  LICENSE  README.md  main.py  mypy.ini  pyproject.toml  reflektion.md
.github/workflows/: main.yml
app/: canonicalization.py  config.py  container.py  container_test.py  data.py  errors.py  main.py  schemas.py  semantic.py  semantic_fingerprint.py  state.py  validation.py
app/api/: ai.py
app/chain/: circuit_breaker.py  (+8 more)
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tests/: conftest.py  test_ai_ask.py  test_ai_stream.py  test_cache_hit.py  test_cache_invalidation.py  test_cache_miss.py  test_cache_ttl.py  test_chain.py  test_circuit_breaker.py  test_circuit_breaker_half_open.py  test_circuit_breaker_open.py  test_circuit_breaker_trip.py  test_csv_parquet_content.py  test_csv_validator_edge_cases.py  test_download.py  test_download_parquet.py  test_endpoints.py  test_etag.py  test_fallback_strategy.py  test_llm_timeout.py  test_parquet_column_lineage.py  test_parquet_nullable_column_edge_cases.py  test_parquet_roundtrip.py  test_parquet_schema_canonicalization.py  test_parquet_schema_drift.py  test_parquet_schema_merge_scenarios.py  test_parquet_schema_normalization.py  test_parquet_semantic_drift.py  test_parquet_type_coercion_edge_cases.py  test_parquet_validator_edge_cases.py  test_rate_limit.py  test_retry_policy.py  test_schema_drift.py  test_schema_drift_auto_update.py  test_schema_drift_detection.py  test_security_headers.py  test_stats.py  test_upload.py  test_validator_edgecases.py
(+20 files in other folders)
