[project]
name = "kk2-oraklet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "brotli>=1.2.0",
    "fastapi>=0.136.3",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "python-multipart>=0.0.29",
    "slowapi>=0.1.9",
    "starlette>=1.1.0",
    "transformers>=5.9.0",
    "uvicorn>=0.48.0",
]
